--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,10 @@ Desktop.ini
 *.log
 *.swp
 *~
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
